--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config webpack.config.js",
+    "dev": "webpack-dev-server --history-api-fallback --config   webpack.config.js",
     "build": "webpack --progress --hide-modules --config webpack.prd.config.js"
   },
   "author": "hhq",
@@ -35,6 +35,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1"
   }
 }
