--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "webpack-dev-server --history-api-fallback --config   webpack.config.js",
-        "build": "rm -rf dist/ \n webpack --progress --hide-modules --config webpack.prd.config.js",
+        "build": "webpack --progress --hide-modules --config webpack.prd.config.js",
         "clean": " rm -rf dist/ "
     },
     "author": "hhq",
